# localizer-rs

./: Cargo.toml  LICENSE.txt  codecov.yml  justfile
.github/: CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  dependabot.yml  errors.md  labeler.yml  mergify.yml
.github/workflows/: codecov_workflow.yml  dependencies.yml  rust.yml
examples/: main.rs
examples/translations/: en.json
src/: errors.rs  lib.rs
tests/: errors.rs  lib.rs  main.rs
