[package]
name = "localizer-rs"
description = "Localizer helps localize (translate) your rust applications using json files."
version = "1.2.0"
authors = [
	"ElBe-Plaq <elbe.dev.plaq@gmail.com>"
]
edition = "2021"
rust-version = "1.69"
documentation = "https://docs.rs/localizer_rs/"
readme = ".github/README.md"
repository = "https://github.com/ElBe-Development/localizer-rs/"
license = "MIT"
keywords = ["i18n", "L10n", "json", "local", "translation"]
categories = [
	"internationalization",
	"localization"
]
publish = true

[dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
